--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@
   .search{padding:10px;border-radius:10px;background:transparent;border:1px solid rgba(255,255,255,0.02);color:var(--muted);min-width:220px}
   .empty{opacity:0.6;padding:18px;border-radius:12px;border:1px dashed rgba(255,255,255,0.03);text-align:center}
 
+  /* Pin bounce animation at the end of pin flow */
+  @keyframes pinBounce {
+    0%   { transform: translateY(0) scale(1); }
+    45%  { transform: translateY(-10px) scale(1.03); }
+    70%  { transform: translateY(4px)  scale(.99); }
+    100% { transform: translateY(0)  scale(1); }
+  }
+  .pin-bounce { animation: pinBounce 420ms cubic-bezier(.25,.9,.35,1); }
+
   @media (max-width:880px) { .card .actions{ display:none; } .side-actions{ display:flex; } }
   @media (min-width:881px) { .side-actions{ display:none; } }
   @media (max-width:640px){ header{flex-direction:column;align-items:flex-start;gap:8px} .templates{grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:10px} }
@@ -319,6 +328,53 @@
 
   function reorderPinned(){ const pinned = templates.filter(t=>t.pinned); const rest = templates.filter(t=>!t.pinned); templates = pinned.concat(rest); }
 
+  // helper animation: animate a card to the top of the templates container
+  function animatePinToTop(cardEl) {
+    return new Promise((resolve) => {
+      try {
+        const rect = cardEl.getBoundingClientRect();
+        const targetRect = templatesContainer.getBoundingClientRect();
+        // destination: near top of templates container (padding 10)
+        const destX = (targetRect.left + 12) - rect.left;
+        const destY = (targetRect.top + 12) - rect.top;
+
+        // clone
+        const clone = cardEl.cloneNode(true);
+        clone.style.position = 'fixed';
+        clone.style.left = rect.left + 'px';
+        clone.style.top = rect.top + 'px';
+        clone.style.width = rect.width + 'px';
+        clone.style.margin = '0';
+        clone.style.zIndex = 9999;
+        clone.style.pointerEvents = 'none';
+        clone.style.transition = 'transform 520ms cubic-bezier(.2,.9,.3,1), opacity 520ms ease';
+        document.body.appendChild(clone);
+
+        // dim original while animating
+        cardEl.style.transition = 'opacity 180ms ease';
+        cardEl.style.opacity = '0.28';
+
+        requestAnimationFrame(() => {
+          clone.style.transform = `translate(${destX}px, ${destY}px) scale(.95) rotate(-2deg)`;
+          clone.style.opacity = '0.95';
+        });
+
+        // cleanup after animation
+        setTimeout(() => {
+          clone.style.opacity = '0';
+          setTimeout(() => {
+            if (clone.parentNode) clone.parentNode.removeChild(clone);
+            cardEl.style.opacity = '';
+            resolve();
+          }, 140);
+        }, 540);
+      } catch (err) {
+        // fallback immediately
+        resolve();
+      }
+    });
+  }
+
   // render templates
   function render(){
     templatesContainer.innerHTML = '';
@@ -360,7 +416,8 @@
       // elements
       const inp = card.querySelector('.title');
       const ta = card.querySelector('textarea');
-      const btnPin = card.querySelector('.btnPin') || card.querySelector('.btnPinInline');
+      // Attach pin handlers to BOTH possible pin buttons (side and inline) so visible button always works
+      const btnPinEls = card.querySelectorAll('.btnPin, .btnPinInline');
       const btnCopy = card.querySelector('.btnCopy') || card.querySelector('.btnCopyInline');
       const btnMore = card.querySelector('.btnMore');
       const btnDup = card.querySelector('.btnDupInline');
@@ -400,17 +457,58 @@
       // actions
       async function doCopy(){ try{ await navigator.clipboard.writeText(t.content||''); showToast('Copiado al portapapeles'); } catch(e){ const tmp=document.createElement('textarea'); tmp.value=t.content||''; document.body.appendChild(tmp); tmp.select(); document.execCommand('copy'); document.body.removeChild(tmp); showToast('Copiado (fallback)'); } }
       function doDup(){ addTemplate({title: t.title + ' (copia)', content: t.content}); showToast('Plantilla duplicada'); }
-      function doPin(){ t.pinned = !t.pinned; reorderPinned(); saveTemplates(); render(); showToast(t.pinned ? 'Anclada' : 'Desanclada'); }
       function doShelf(){ shelf.unshift(Object.assign({}, t)); templates = templates.filter(x=>x.id !== t.id); saveShelf(); saveTemplates(); render(); showToast('Guardada en estantería'); }
       function doDel(){ confirmDelete(t.id); }
 
-      // attach
-      if (btnMore) btnMore.addEventListener('click', openMoreMenu);
-      if (btnPin) btnPin.addEventListener('click', doPin);
+      // improved doPin with animation when pinning to top and final bounce
+      function doPin(){
+        const willPin = !t.pinned;
+        if (!willPin) {
+          // unpin quickly
+          t.pinned = false;
+          reorderPinned();
+          saveTemplates();
+          render();
+          showToast('Desanclada');
+          return;
+        }
+        // animate pin to top, then set pinned and re-render, then add final bounce
+        const cardElement = document.querySelector(`.card[data-id="${t.id}"]`);
+        if (!cardElement) {
+          t.pinned = true;
+          reorderPinned();
+          saveTemplates();
+          render();
+          showToast('Anclada');
+          return;
+        }
+        animatePinToTop(cardElement).then(() => {
+          t.pinned = true;
+          reorderPinned();
+          saveTemplates();
+          render();
+          // final bounce on newly pinned card
+          const newEl = document.querySelector(`.card[data-id="${t.id}"]`);
+          if (newEl) {
+            newEl.classList.add('pin-bounce');
+            // ensure removal after animation
+            setTimeout(()=> newEl.classList.remove('pin-bounce'), 520);
+          }
+          showToast('Anclada');
+        });
+      }
+
+      // attach handlers to all pin elements (fix for "no fija" bug)
+      btnPinEls.forEach(el => el.addEventListener('click', () => {
+        doPin();
+      }));
+
+      // attach other handlers
       if (btnCopy) btnCopy.addEventListener('click', doCopy);
       if (btnDup) btnDup.addEventListener('click', doDup);
       if (btnDel) btnDel.addEventListener('click', doDel);
       if (btnShelfInline) btnShelfInline.addEventListener('click', doShelf);
+      if (btnMore) btnMore.addEventListener('click', openMoreMenu);
 
       // pointer/focus behavior
       card.addEventListener('pointerdown', ()=> { setActiveCard(t.id); try{ if (navigator.vibrate) navigator.vibrate(8); } catch(e){} });
@@ -530,11 +628,9 @@
         t.classList.remove('tab-selected');
         t.classList.remove('tab-dim');
       });
-      // add selected
       if (selected === 'login') tabLogin.classList.add('tab-selected');
       if (selected === 'register') tabRegister.classList.add('tab-selected');
       if (selected === 'guest') tabGuest.classList.add('tab-selected');
-      // dim the others
       [tabLogin, tabRegister, tabGuest].forEach(t => {
         if (!t.classList.contains('tab-selected')) t.classList.add('tab-dim');
       });
